dynamix/force-app/main/default/objects/Project_Progress__c/Project_Progress__c.object-meta.xml
<CustomObject>
    <label>Project Progress</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>