dynamix/force-app/main/default/objects/Project_Progress__c/fields/Architect_Certification_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Architect_Certification_Received_Date__c</fullName>
    <label>Architect Certification Received Date</label>
    <type>Date</type>
</CustomField>