dynamix/force-app/main/default/objects/Project_Progress__c/fields/Architecture_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Architecture Certificate Received</label>
    <type>Checkbox</type>
</CustomField>