dynamix/force-app/main/default/objects/Project_Progress__c/fields/Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Progress_Status__c</fullName>
    <label>Progress Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>