dynamix/force-app/main/default/objects/Project_Progress__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commencement</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
                <default>true</default>
                <label>Completion</label>
            </value>
            <value>
                <fullName>OC</fullName>
                <isActive>false</isActive>
                <label>OC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>