dynamix/force-app/main/default/objects/Project_Progress__c/fields/Stage_Type__c.field-meta.xml
<CustomField>
    <fullName>Stage_Type__c</fullName>
    <label>Stage Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plinth</fullName>
            </value>
            <value>
                <fullName>RCC (Slab)</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Doors</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Sliding</fullName>
            </value>
            <value>
                <fullName>OC</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Podium</fullName>
            </value>
            <value>
                <fullName>habitable floor</fullName>
            </value>
            <value>
                <fullName>Terrace</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Plaster</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Elevation</fullName>
            </value>
            <value>
                <fullName>Sanitary fittings</fullName>
            </value>
            <value>
                <fullName>Lifts</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Staircase</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Water pump</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Fit-outs</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Possession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>