dynamix/force-app/main/default/objects/Project_Progress__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Project Progress</relationshipLabel>
    <relationshipName>Project_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>