dynamix/force-app/main/default/objects/Project_Progress__c/validationRules/If_Architecture_Certificate_is_false.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Architecture_Certificate_is_false</fullName>
    <active>true</active>
    <description>If Architecture Certificate is uncheck and  Project Progress is complete</description>
    <errorConditionFormula>Architecture_Certificate__c  = false &amp;&amp;   ISPICKVAL( Progress_Status__c , &quot;Completed&quot;)</errorConditionFormula>
    <errorMessage>You can not Change the Status Completed, please attach the Architecture Certificate.</errorMessage>
</ValidationRule>