dynamix/force-app/main/default/objects/Project_Progress__c/validationRules/Invoice_Architecture_Dates_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Architecture_Dates_Mandatory</fullName>
    <active>true</active>
    <description>Invoice Architecture Dates Mandatory, when Progress status changed to Completed</description>
    <errorConditionFormula>IF(AND(ISPICKVAL( Progress_Status__c , &apos;Completed&apos;),OR(ISBLANK(Invoice_Date__c),ISBLANK( Architect_Certification_Received_Date__c))),true,false)</errorConditionFormula>
    <errorMessage>Invoice Date and Architecture Dates are mandatory when Progress status is Completed</errorMessage>
</ValidationRule>